<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PersonalManager</string>
    <string name="Contacts">Контаты</string>
    <string name="Actions">Мероприятия</string>
    <string name="Tasks">Задачи</string>
    <string name="Report">Отчет</string>
    <string name="ReportOfTime">Отчет по времени</string>
    <string name="Add">Добавить элемент</string>
    <string name="ActionEditTitle">Название мероприятия</string>
    <string name="DateAction">Дата мероприятия</string>
    <string name="Time">Время</string>
    <string name="SelectDate">Выберите дату</string>
    <string name="SelectTime">Введите время</string>
    <string name="AddPhoneNumberButton">Добавить</string>
    <string name="AddEmailButton">Добавить</string>
    <string name="AddWebSiteButton">Добавить</string>

    <string name="addTask">Добавить задачу</string>
    <string name="removeTask">Удалить задачу</string>
    <string name="TaskEditTitle">Название задачи</string>
    <string name="input_name_task">Введите название задачи</string>
    <string name="DescriptionTask">Описание задачи</string>
    <string name="Input_description_task">Введите описание задачи</string>
    <string name="SelectTask">Укажите задачу</string>
    <string name="AddTask">Добавить задачу</string>
    <string name="AddPerson">Добавить личность</string>
    <string name="AddAction">Добавить мероприятие</string>
    <string name="AddGroup">Добавить Группу</string>
    <string name="ListActionInTask">Список мероприятий в задаче</string>
    <string name="AddPersonInAction">Добавить человека</string>

    <string name="GroupEditTitle">Название группы</string>
    <string name="GroupEditDescription">Описание группы</string>

    <string name="title_section1">Участники</string>
    <string name="title_section2">Группы</string>
    <string name="title_section3">Меропрития</string>
    <string name="title_section4">Задачи</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
