<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TaskEditTitle"/>

    <EditText
        android:id="@+id/TaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#888888"
        android:text="@string/input_name_task"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DescriptionTask"/>

    <EditText
        android:id="@+id/TaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#888888"
        android:lineSpacingMultiplier="8"
        android:text="@string/Input_description_task"/>

</LinearLayout>