<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ActionEditTitle"/>

    <EditText
        android:id="@+id/ActionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#888888"
        android:text="Введите название мероприятия"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DateAction"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/ButtonDate"
            android:text="@string/DateAction" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:id="@+id/ButtonTime"
            android:text="@string/Time"
            />

    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Описание мероприятия"/>

    <EditText
        android:id="@+id/ActionDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#888888"
        android:text="Введите описание мероприятия"/>

</LinearLayout>