<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Имя"
                    android:layout_gravity="center"
                    android:paddingLeft="60pt"      />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Имя"
                    android:id="@+id/person_edit_firstname" />

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Фамилия"
                    android:layout_gravity="center"
                    android:paddingLeft="60pt"      />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Фамилия"
                    android:id="@+id/person_edit_lastname" />

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Кем приходиться"
                    android:layout_gravity="center"
                    android:paddingLeft="60pt"      />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Кем приходиться"
                    android:id="@+id/person_edit_post" />
        </LinearLayout>
        <!--не показывается аватар-->
        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/ic_launcher" />
        </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Номера телефонов"/>

    <ListView
        android:id="@+id/NumberPhoneListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/NumberPhoneAddButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddPhoneNumberButton"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Электронная почта"/>

    <ListView
        android:id="@+id/EmailListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/EmailAddButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddEmailButton"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Сайты и соцсети"/>

    <ListView
        android:id="@+id/WebSiteListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/WebSiteAddButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddWebSiteButton"/>
</LinearLayout>
</ScrollView>